fix: picture modal on narrow screens

--- a/blocks/modal/__image/modal__image.css
+++ b/blocks/modal/__image/modal__image.css
@@ -1,7 +1,6 @@
 .modal__image {
   width: 100%;
   height: 100%;
-  max-width: 75vw;
   max-height: 75vh;
   object-fit: cover;
 }
